# tware

./: .gitignore  CMakeLists.txt  NOTICE  NOTICE_TEMPLATE
aws/: aws_utils.py  config_files.py  ec2.config  fabfile.py  tware_utils.py
benchmarks/db/: hyper.sh  (+1 more)
experiments/: satish.cpp
genomics/: vc.py
refind/: executor.py  instructions.md  refind.py  result.py  server.py  task.py  test.py  test_utils.py  unit_tests.py  util.py
scripts/: install.sh  run_benchmarks.py  single_hdfs.sh
src/: CMakeLists.txt  Master.cpp  Worker.cpp
src/codegen/: Generator.h  Printer.h
src/codegen/optimizer/: BasicOptimizer.h  Optimizer.h
src/codegen/strategy/: AdaptiveStrategy.h  OperatorStrategy.h  PipelineStrategy.h  Strategy.h
src/codegen/template/: DummyTemplate.h  JobTemplate.h  PipelineTemplate.h  StageTemplate.h  TaskTemplate.h  Template.h  UdfTemplate.h
src/codegen/template/data/: CollectorTemplate.h  DataTemplate.h  ScalarTemplate.h  StoreTemplate.h
src/codegen/template/op/: LoadOpTemplate.h  LoopOpTemplate.h  MapOpTemplate.h  OpTemplate.h  ReduceOpTemplate.h  SaveOpTemplate.h
src/compiler/: Compiler.h  Executable.h  LlvmIr.h
src/data/: Any.h  Collector.h  ColumnTuple.h  HashCollector.h  HashCollector2.h  HybridTuple.h  Inferrer.h  RowTuple.h  Schema.h  Store.h  StoreType.h  Tuple.h  Varchar.h
src/file/: BasicBinner.h  Binner.h  Block.h  File.h  FileInfo.h  FileManager.h  HdfsFile.h  HdfsFileInfo.h  Histogram.h  MemFile.h  MemFileInfo.h  Request.h  Serializer.h
src/frontend/: Connection.h  Context.h  Input.h  Output.h  TGraph.h  TMatrix.h  TSet.h  TStream.h
src/frontend/file/: Loader.h  Saver.h
src/frontend/io/: FileSource.h  TcpSource.h
src/frontend/ml/: KmeansMaster.h  KmeansWorker.h  LogregMaster.h  LogregWorker.h  PagerankMaster.h  PagerankWorker.h  SortReader.h  SortWriter.h
src/io/: DsvParser.h  FileReader.h  HdfsReader.h  Parser.h  Reader.h  TextParser.h  Writer.h
src/job/: Executor.h  Job.h  JobController.h  Planner.h  Result.h  Task.h  TaskController.h  Udf.h
src/job/op/: FilterOp.h  LoadOp.h  LoopOp.h  MapOp.h  Op.h  ReduceOp.h  SaveOp.h
src/job/scheduler/: BasicScheduler.h  LocalityScheduler.h  MultitenancyScheduler.h  Scheduler.h
src/net/: InprocSocket.h  Socket.h  TcpSocket.h
src/serializer/: Archive.h  Serializable.h  Serializer.h
src/server/: GlobalManager.h  Master.h  Worker.h
src/util/: Config.h  Defaults.h  Logging.h  Runnable.h  Thread.h  Timer.h
tests/_stored/: CMakeLists.txt  gen.sh  kmeans.cpp  load.cpp  logreg.cpp  pagerank.cpp  sort.cpp
vizdom/: cache.py  executor.py  request.py  result.py  server.py  util.py  vizdom.py
vizdom_demo/: demo.py
web/: server.js
(+385 files in other folders)
